ingt2/dep1-sv1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx
  name: deployment-mynginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: myapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: service-myapp
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: myapp
