ingt2/dep2-svc2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nginx
  name: deployment-mynginx2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp2
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp2
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: myapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx
  name: service-myapp2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: myapp2
