ingt2/https-myapp-ingres.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx
  name: ingress-eks-alb-https
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:598792377165:certificate/3ae35aa3-101e-4a0e-99d6-626a057eb855
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    #alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
    - http:
        paths:
        - path: /*
          pathType: Prefix
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
        - path: /yellow/*
          pathType: Prefix
          backend:
            service:
              name: service-myapp
              port:
                number: 80
        - path: /green/*
          pathType: Prefix
          backend:
            service:
              name: service-myapp2
              port:
                number: 80
