ingt2/myapp-ingres.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nginx
  name: ingress-eks-alb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /yellow
          pathType: Prefix
          backend:
            service:
              name: service-myapp
              port:
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: service-myapp2
              port:
                number: 80
